Fix form fields and importing
- Fixed form fields not hiding in typology and entity forms.
- Fixed content overflow causing toolbar to be squashed.
- Fixed author column of project page to display email or username.
- Fixed project duplication.
- Updated bismuth packages for fixing importing.
- Entities.findByTypologyClass()
- Added latest AURIN ACS package as a submodule.

--- a/app/client/resources/layout.less
+++ b/app/client/resources/layout.less
@@ -110,6 +110,7 @@ body {
   }
   > .content {
     height: 100%;
+    overflow: auto;
     display: flex;
     // A full page crud form.
     > .flex-panel.crud.form {
